# simple_notes

./: CMakeLists.txt  LICENSE  README.md
src/: database.cpp  database.h  main.cpp  notes.h
